--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "homepage": "https://github.com/Bit-52/arrogant-bundle#readme",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.3",
     "chalk": "^5.3.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
